<resources>
    <string name="app_name">AndroidTutorial</string>
    <string name="string_main_placeholder">Input your text</string>
    <string name="string_hello_world">Hello World!</string>
    <string name="label_button_display">Display</string>
    <string name="message_empty_input">Please input some text</string>
    <string name="label_button_share">Share</string>
    <string name="label_button_clear">Clear</string>
    <string name="label_button_scratch" >Scratch</string>
</resources>
